<resources>
    <string name="app_name">游客</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="logo" translatable="false">show your fucking logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">欢迎使用游客App</string>
    <string name="slide_2_title">通过视频等方式轻松了解当地热门景点与特色美食</string>
    <string name="slide_3_title" translatable="false">Fall in love at first sight</string>
    <string name="slide_4_title" translatable="false">Both fall in love</string>
    <string name="slide_5_title" translatable="false">Together forever</string>
    <string name="title_activity_gallery" translatable="false">Gallery</string>
    <string name="title_activity_favourites">favourites</string>
    <string name="homename">首页</string>
    <string name="favouritesname">我的最爱</string>
    <string name="others">其他</string>
    <string name="gallery">精美壁纸</string>
    <string name="settings">设定</string>
    <string name="share">分享App</string>
    <string name="Comprehensive">综合</string>
    <string name="food">特色美食</string>
    <string name="view">热门景点</string>
    <string name="login">登陆</string>
    <string name="favourites_no">收藏夹里没有东西？</string>
    <string name="favourites_no2">去地图上找些你感兴趣的东西吧！</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
